# scan2epub

./: .clineignore  .env.template  .gitignore  LICENSE  README.md  azure_config_tester.py  azure_storage_handler.py  config_manager.py  epub_builder.py  pdf_ocr_processor.py  pyproject.toml  requirements.txt  scan2epub.ini  scan2epub.py
docs/: azure-setup.md  local-pdf-support.md  refactor_plan.md
memory_bank/: 01_project_overview.md  02_technical_architecture.md  03_azure_configuration.md  04_usage_guide.md  05_code_structure.md  06_limitations_issues.md  07_roadmap.md  INDEX.md  README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/scan2epub/: cli.py  config.py  config_manager.py  pipeline.py
src/scan2epub/azure/: __init__.py  diagnostics.py  preflight.py  storage.py
src/scan2epub/epub/: __init__.py  builder.py  cleaner.py  translator.py
src/scan2epub/ocr/: azure_cu.py
src/scan2epub/translate/: __init__.py  translator.py
src/scan2epub/utils/: errors.py  io.py  logging.py
tests/: conftest.py  test_epub_translation_noop_guard.py  test_openai_env_resolution.py  test_pipeline_translate_preflight_abort.py  test_translator_preflight.py
website/: index.html  script.js  styles.css
